# CTrilinos

./: CMakeLists.txt  Makefile.am  Makefile.export.CTrilinos.in  Makefile.in  configure  configure.ac
cmake/: CTrilinos_config.h.in  Dependencies.cmake
doc/: DoxyfileWeb  HowItWorks  index.doc
example/: CMakeLists.txt
example/amesos/: CMakeLists.txt  example_AmesosFactory_Tridiag.c
example/aztecoo/: CMakeLists.txt  simple_epetra_aztecoo.c
example/crsgraph/: CMakeLists.txt  CrsGraph_example.c
example/galeri/: CMakeLists.txt  example_Galeri_LinearProblem.c
example/ifpack/: CMakeLists.txt  Ifpack_example_Amesos.c
example/verySimple/: CMakeLists.txt  verySimple.c
src/: CMakeLists.txt  CNOX_Driver.cpp  CTrilinos_Config.h.in  CTrilinos_ConfigDefs.h  CTrilinos_Table.hpp  CTrilinos_TableRepos.cpp  CTrilinos_TableRepos.hpp  CTrilinos_TableRepos_Utils.hpp  CTrilinos_Version.h  CTrilinos_difficult.cpp  CTrilinos_difficult.hpp  CTrilinos_enum_wrappers.h  CTrilinos_enums.h  CTrilinos_exceptions.hpp  CTrilinos_external_utils.cpp  CTrilinos_external_utils.h  CTrilinos_flex_enums.h  CTrilinos_table_calls.cpp  CTrilinos_table_man.cpp  CTrilinos_table_man.h  CTrilinos_test_utils.cpp  CTrilinos_test_utils.hpp  CTrilinos_utils.cpp  CTrilinos_utils.hpp  CTrilinos_utils_templ.hpp  FEpetra_Comm.cpp  FEpetra_Comm.h  FEpetra_Comm_Cpp.hpp  FEpetra_Map.cpp  FEpetra_Map.h  FEpetra_Map_Cpp.hpp  FEpetra_MpiComm.cpp  FEpetra_MpiComm.h  FEpetra_MpiComm_Cpp.hpp  FEpetra_SerialComm.cpp  FEpetra_SerialComm.h  FEpetra_SerialComm_Cpp.hpp  Makefile.am  Makefile.in
src/amesos/: CAmesos.cpp  CAmesos.h  CAmesos_BaseSolver.cpp  CAmesos_BaseSolver.h  CAmesos_BaseSolver_Cpp.hpp  CAmesos_Cpp.hpp
src/aztecoo/: CAztecOO.cpp  CAztecOO.h  CAztecOO_Cpp.hpp  CAztecOO_StatusTest.cpp  CAztecOO_StatusTest.h  CAztecOO_StatusTestCombo.cpp  CAztecOO_StatusTestCombo.h  CAztecOO_StatusTestCombo_Cpp.hpp  CAztecOO_StatusTestMaxIters.cpp  CAztecOO_StatusTestMaxIters.h  CAztecOO_StatusTestMaxIters_Cpp.hpp  CAztecOO_StatusTestResNorm.cpp  CAztecOO_StatusTestResNorm.h  CAztecOO_StatusTestResNorm_Cpp.hpp  CAztecOO_StatusTest_Cpp.hpp
src/epetra/: CEpetra_BLAS.cpp  CEpetra_BLAS.h  CEpetra_BLAS_Cpp.hpp  CEpetra_BlockMap.cpp  CEpetra_BlockMap.h  CEpetra_BlockMapData.cpp  CEpetra_BlockMapData.h  CEpetra_BlockMapData_Cpp.hpp  CEpetra_BlockMap_Cpp.hpp  CEpetra_Comm.cpp  CEpetra_Comm.h  CEpetra_Comm_Cpp.hpp  CEpetra_CompObject.cpp  CEpetra_CompObject.h  CEpetra_CompObject_Cpp.hpp  CEpetra_CrsGraph.cpp  CEpetra_CrsGraph.h  CEpetra_CrsGraphData.cpp  CEpetra_CrsGraphData.h  CEpetra_CrsGraphData_Cpp.hpp  CEpetra_CrsGraph_Cpp.hpp  CEpetra_CrsMatrix.cpp  CEpetra_CrsMatrix.h  CEpetra_CrsMatrix_Cpp.hpp  CEpetra_Data.cpp  CEpetra_Data.h  CEpetra_Data_Cpp.hpp  CEpetra_Directory.cpp  CEpetra_Directory.h  CEpetra_Directory_Cpp.hpp  CEpetra_DistObject.cpp  CEpetra_DistObject.h  CEpetra_DistObject_Cpp.hpp  CEpetra_Distributor.cpp  CEpetra_Distributor.h  CEpetra_Distributor_Cpp.hpp  CEpetra_Export.cpp  CEpetra_Export.h  CEpetra_Export_Cpp.hpp  CEpetra_FECrsMatrix.cpp  (+73 more)
src/galeri/: CGaleri_CrsMatrices.cpp  CGaleri_CrsMatrices.h  CGaleri_CrsMatrices_Cpp.hpp  CGaleri_Maps.cpp  CGaleri_Maps.h  CGaleri_Maps_Cpp.hpp  CGaleri_Utils.cpp  CGaleri_Utils.h  CGaleri_Utils_Cpp.hpp
src/ifpack/: CIfpack.cpp  CIfpack.h  CIfpack_Cpp.hpp  CIfpack_Preconditioner.cpp  CIfpack_Preconditioner.h  CIfpack_Preconditioner_Cpp.hpp
src/pliris/: CPliris.cpp  CPliris.h  CPliris_Cpp.hpp
src/teuchos/: CTeuchos_CommandLineProcessor.cpp  CTeuchos_CommandLineProcessor.h  CTeuchos_CommandLineProcessor_Cpp.hpp  CTeuchos_ParameterEntry.cpp  CTeuchos_ParameterEntry.h  CTeuchos_ParameterEntry_Cpp.hpp  CTeuchos_ParameterList.cpp  CTeuchos_ParameterList.h  CTeuchos_ParameterList_Cpp.hpp  CTeuchos_any.cpp  CTeuchos_any.h  CTeuchos_any_Cpp.hpp
test/: CMakeLists.txt  CTrilinos_UnitTestHelpers.cpp  CTrilinos_UnitTestHelpers.hpp  Makefile.am  Makefile.in  definition  simpleEpetraExternCInterface.c
test/amesos/: CAmesos_BaseSolver_UnitTests.cpp  CAmesos_UnitTests.cpp  CMakeLists.txt
test/epetra/: CEpetra_BLAS_UnitTests.cpp  CEpetra_BlockMap_UnitTests.cpp  CEpetra_Comm_UnitTests.cpp  CEpetra_CompObject_UnitTests.cpp  CEpetra_CrsGraph_UnitTests.cpp  CEpetra_CrsMatrix_UnitTests.cpp  CEpetra_Directory_UnitTests.cpp  CEpetra_DistObject_UnitTests.cpp  CEpetra_Distributor_UnitTests.cpp  CEpetra_Export_UnitTests.cpp  CEpetra_Flops_UnitTests.cpp  CEpetra_Import_UnitTests.cpp  CEpetra_JadMatrix_UnitTests.cpp  CEpetra_LAPACK_UnitTests.cpp  CEpetra_LinearProblem_UnitTests.cpp  CEpetra_Map_UnitTests.cpp  CEpetra_MpiComm_UnitTests.cpp  CEpetra_MultiVector_UnitTests.cpp  CEpetra_Object_UnitTests.cpp  CEpetra_OffsetIndex_UnitTests.cpp  CEpetra_Operator_UnitTests.cpp  CEpetra_RowMatrix_UnitTests.cpp  CEpetra_SerialComm_UnitTests.cpp  CEpetra_SrcDistObject_UnitTests.cpp  CEpetra_Time_UnitTests.cpp  CEpetra_UnitTestHelpers.cpp  CEpetra_UnitTestHelpers.hpp  CEpetra_UnitTestHelpers_UnitTests.cpp  CEpetra_Vector_UnitTests.cpp  CMakeLists.txt
test/epetra/ImpExp/: CEpetra_ImpExp_test.cpp
test/epetra/RowMatrix/: CEpetra_RowMatrix_AppTest.cpp
test/simpleEpetraExternCInterface/: CMakeLists.txt  simpleEpetraExternCInterface.c
test/table/: CMakeLists.txt  CTrilinos_TableRepos_UnitTests.cpp  CTrilinos_Table_UnitTests.cpp  CTrilinos_utils_UnitTests.cpp
test/teuchos/: CMakeLists.txt  CTeuchos_CommandLineProcessor_UnitTests.cpp  CTeuchos_ParameterEntry_UnitTests.cpp  CTeuchos_ParameterList_UnitTests.cpp  CTeuchos_any_UnitTests.cpp
